# TaskQueue

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
ccb/: CMakeLists.txt  ccb.c
ccb/include/ccb/: ccb.h
ccblib/: CMakeLists.txt  ccb.c
ccblib/include/ccb/: ccb.h
example/: CMakeLists.txt  main.cpp
scratch/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
scratch/src/: WrappedTask.cpp  WrappedTask.h  main.cpp
scratch/test_package/: conanfile.py
src/: CMakeLists.txt  TaskQueue.hpp
src/include/TaskQueue/: Observer.hpp  TaskQueue.hpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  TaskQueueTests.cpp
